--- a/all/build.gradle
+++ b/all/build.gradle
@@ -6,6 +6,7 @@ def subprojects = [
         project(':opentelemetry-contrib-trace-utils'),
         project(':opentelemetry-exporters-inmemory'),
         project(':opentelemetry-exporters-jaeger'),
+        project(':opentelemetry-exporters-zipkin'),
         project(':opentelemetry-opentracing-shim'),
         project(':opentelemetry-sdk'),
         project(':opentelemetry-sdk-contrib-async-processor'),
@@ -19,6 +20,7 @@ def subprojects_javadoc = [
         project(':opentelemetry-contrib-trace-utils'),
         project(':opentelemetry-exporters-inmemory'),
         project(':opentelemetry-exporters-jaeger'),
+        project(':opentelemetry-exporters-zipkin'),
         project(':opentelemetry-opentracing-shim'),
         project(':opentelemetry-sdk'),
         project(':opentelemetry-sdk-contrib-async-processor'),
